# ErasmusCompat

./: .gitignore  Cargo.toml  config.json  fix_null_locations.py  gen_migration_code.py  get_locations.py
data/: ERASMUS_UNIVERSITIES.csv  cities.auto.csv  countries.csv  unis.csv
migrations/: 20230912205009_init.down.sql  20230912205009_init.sql  20230912205009_init.up.sql  20230913115245_universities.sql
src/: api.rs  config.rs  csv_loader.rs  database.rs  get_lat_lon.rs  main.rs  serialize.rs
src/api/: extractors.rs
src/database/: generic.rs  model.rs
web/: package.json
web/src/: AddDestinations.tsx  App.scss  App.tsx
